# ellipticoin-base-contracts

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  build.sh  package-lock.json  package.json
_build/: token.big.wasm  token.wasm
base_api/: Cargo.toml  package.json
base_api/src/: base_api.rs  entry_point.rs  lib.rs
base_api/test/: base-api-test.js
base_api/test/support/: fake-blockchain.js
base_token/: Cargo.toml  base_token.wast  package-lock.json  package.json
base_token/scripts/: build.sh
base_token/src/: base_token.rs  base_token_test.rs  ellipticoin_entry_point.rs  entry_point.rs  error.rs  errors.rs  issuance.rs  lib.rs
base_token/test/: base-token-test.js  token-test.js
base_token/test/support/: BaseContractClient.js  BaseTokenClient.js  fake-blockchain.js
human_readable_name_registry/: Cargo.toml  package.json
human_readable_name_registry/src/: ellipticoin_entry_point.rs  human_readable_name_registry.rs  lib.rs  memory.rs
human_readable_name_registry/test/: human-readable-name-registration-test.js
human_readable_name_registry/test/support/: fake-blockchain.js
leader_election/: Cargo.toml  package-lock.json  package.json
leader_election/scripts/: build.sh
leader_election/src/: entry_point.rs  error.rs  leader_election.rs  leader_election_test.rs  lib.rs
leader_election/test/: leader-election-test.js
leader_election/test/support/: fake-blockchain.js  utils.js
proto/: entry_point.proto
protos/: base_token.proto
src/: base_token.rs  base_token_test.rs  blockchain.rs  contract_registry.rs  elipticoin_blockchain.rs  ellipticoin_blockchain.rs  ellipticoin_entry_point.rs  entry_point.rs  error.rs  ethereum_entry_point.rs  human_readable_name_registration.rs  human_readable_name_registry.rs  items.proto  lib.rs  main.rs  memory.rs  mod.rs  token.rs  wasm_rpc.rs
src/protos/: base_token.rs  base_token_service.rs  elipticoin.rs  helpers.rs  mod.rs
src/test/: fake_blockchain.rs  mod.rs
staking_contract/: Cargo.toml
test/: deploy-contract-test.js  human-readable-name-registration-test.js  token-test.js
test/support/: adder.wasm  adder.wast  base_token.pb.js  base_token.pb.json  fake-blockchain.js  fake-blockchain.lua  utils.js
tests/: entry_point_test.rs  token_test.rs
user_contracts/: Cargo.toml
user_contracts/src/: errors.rs  lib.rs  user_contracts.rs  user_contracts_test.rs
user_contracts/test/: leader-election-test.js
