[package]
name = "base_token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[build-dependencies]
protoc-rust = "1.4"
cask = "0.*"

[lib]
crate_type = ["cdylib"]

[dev-dependencies]
cask = "0.*"

[dependencies]
bytes = { version = "0.4", features = ["serde"] }
protobuf = "1.*"
memalloc = "0.1.0"
