[package]
name = "base_token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'


[build-dependencies]
cask = "0.*"

[lib]
crate_type = ["cdylib"]

[dev-dependencies]
cask = "0.*"


[dependencies]
cbor-no-std = { path = '../rust-cbor-no-std', features = ["no_std"] }
wee_alloc = { git = 'https://github.com/fitzgen/wee_alloc' }
rlibc = "1.0"
