[package]
name = "base_token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[build-dependencies]
cask = "0.*"

[profile.release]
debug = false
lto = true
opt-level = 'z'

[lib]
crate_type = ["cdylib"]

[dev-dependencies]
ellipticoin-test-framework = "0.1.0"

[dependencies]
wee_alloc = {"git" = "https://github.com/rustwasm/wee_alloc"}
wasm-rpc = { path = "../../rust-wasm-rpc/wasm-rpc"}
wasm-rpc-macros = { path = "../../rust-wasm-rpc/wasm-rpc-macros"}
cbor-lite = "0.1.1"
