[package]
name = "base_token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[build-dependencies]
cask = "0.*"

[profile.release]
debug = false
lto = true
opt-level = 'z'

[lib]
crate_type = ["cdylib"]

[dev-dependencies]
ellipticoin-test-framework = {"path" = "../../rust-ellipticoin-test-framework"}

[dependencies]
ellipticoin = {"path" = "../../rust-ellipticoin"}
wasm-rpc = { path = "../../rust-wasm-rpc/wasm-rpc"}
wee_alloc = "0.4.2"
wasm-rpc-macros = { path = "../../rust-wasm-rpc/wasm-rpc-macros"}
cbor-lite = "0.1.1"
