[package]
name = "base_token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = {"path" = "../../rust-ellipticoin-test-framework"}
mock-ellipticoin = {"path" = "../../rust-mock-ellipticoin"}

[dependencies]
ellipticoin = {"path" = "../../rust-ellipticoin"}
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = "0.2.10"
wasm-rpc-macros = "0.2.10"
