[package]
name = "leader_election"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[build-dependencies]
cask = "0.*"

[profile.release]
debug = false
lto = true
opt-level = 'z'

[lib]
crate_type = ["cdylib"]

[dev-dependencies]
ellipticoin-test-framework = "0.1.0"

[dependencies]
ellipticoin = "0.1.2"
wasm-rpc = "0.1.3"
cbor-lite = "0.1.1"
